--- a/control_ws/src/three_wheel/CMakeLists.txt
+++ b/control_ws/src/three_wheel/CMakeLists.txt
@@ -50,7 +50,7 @@ install(
   DESTINATION include/three_wheel
 )
 install(
-  DIRECTORY description/launch description/ros2_control description/urdf description/rviz
+  DIRECTORY description/ros2_control description/urdf description/rviz
   DESTINATION share/three_wheel
 )
 install(
